--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sharp": "^3.14.1",
     "gatsby-plugin-sitemap": "^4.10.0",
+    "gatsby-remark-image-attributes": "^1.0.1",
+    "gatsby-remark-images": "^5.11.0",
     "gatsby-remark-katex": "^5.11.0",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-remark": "^4.11.0",
