--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "gatsby-remark-image-attributes": "^1.0.1",
     "gatsby-remark-images": "^5.11.0",
     "gatsby-remark-katex": "^5.11.0",
+    "gatsby-remark-prismjs": "^5.11.0",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-theme-material-ui": "^5.0.0",
     "gatsby-transformer-remark": "^4.11.0",
     "gatsby-transformer-sharp": "^3.14.0",
     "katex": "^0.13.18",
+    "prism-themes": "^1.9.0",
+    "prismjs": "^1.25.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
