--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@mui/material": "^5.0.3",
     "@mui/styles": "^5.0.1",
     "gatsby": "^3.13.1",
+    "gatsby-plugin-emotion": "^7.10.0",
     "gatsby-plugin-google-analytics": "^3.14.0",
     "gatsby-plugin-image": "^1.14.1",
     "gatsby-plugin-manifest": "^3.14.0",
