--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/react": "^1.6.22",
     "@mui/material": "^5.0.3",
     "@mui/styles": "^5.0.1",
+    "@mui/utils": "^5.4.4",
     "gatsby": "^3.13.1",
     "gatsby-plugin-emotion": "^7.10.0",
     "gatsby-plugin-google-analytics": "^3.14.0",
@@ -38,7 +39,8 @@
     "gatsby-transformer-sharp": "^3.14.0",
     "katex": "^0.13.18",
     "prism-themes": "^1.9.0",
-    "prismjs": "^1.25.0",
+    "prismjs": "^1.27.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
