--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "debug": "node $NODE_DEBUG_OPTION ./node_modules/.bin/gatsby develop"
   },
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@mui/styles": "^5.5.1",
     "@mui/utils": "^5.4.4",
@@ -44,6 +46,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-responsive": "^9.0.0-beta.6",
     "react-typography": "^0.16.20",
     "typewriter-effect": "^2.18.2",
     "typography": "^0.16.21",
