--- a/package.json
+++ b/package.json
@@ -14,40 +14,42 @@
     "debug": "node $NODE_DEBUG_OPTION ./node_modules/.bin/gatsby develop"
   },
   "dependencies": {
-    "@emotion/react": "^11.8.2",
+    "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "@mui/icons-material": "^5.5.1",
-    "@mui/material": "^5.5.2",
-    "@mui/styles": "^5.5.1",
-    "@mui/utils": "^5.4.4",
-    "gatsby": "^3.14.6",
-    "gatsby-plugin-emotion": "^7.10.0",
-    "gatsby-plugin-google-analytics": "^3.14.0",
-    "gatsby-plugin-image": "^1.14.2",
-    "gatsby-plugin-manifest": "^3.14.0",
-    "gatsby-plugin-react-helmet": "^4.14.0",
-    "gatsby-plugin-sharp": "^3.14.3",
-    "gatsby-plugin-sitemap": "^4.10.0",
-    "gatsby-plugin-typography": "^3.14.0",
+    "@mdx-js/mdx": "^2.1.1",
+    "@mdx-js/react": "^2.1.1",
+    "@mui/icons-material": "^5.8.2",
+    "@mui/material": "^5.8.2",
+    "@mui/styles": "^5.8.0",
+    "@mui/utils": "^5.8.0",
+    "gatsby": "^4.15.2",
+    "gatsby-plugin-emotion": "^7.15.0",
+    "gatsby-plugin-google-analytics": "^4.15.0",
+    "gatsby-plugin-image": "^2.15.1",
+    "gatsby-plugin-manifest": "^4.15.1",
+    "gatsby-plugin-react-helmet": "^5.15.0",
+    "gatsby-plugin-sharp": "^4.15.1",
+    "gatsby-plugin-sitemap": "^5.15.1",
+    "gatsby-plugin-typography": "^4.15.0",
     "gatsby-remark-image-attributes": "^1.1.0",
-    "gatsby-remark-images": "^5.11.0",
-    "gatsby-remark-katex": "^5.11.0",
-    "gatsby-remark-prismjs": "^5.11.0",
-    "gatsby-source-filesystem": "^3.14.0",
-    "gatsby-theme-material-ui": "^5.1.0",
-    "gatsby-transformer-remark": "^4.11.0",
-    "gatsby-transformer-sharp": "^3.14.0",
+    "gatsby-remark-images": "^6.15.1",
+    "gatsby-remark-katex": "^6.15.0",
+    "gatsby-remark-prismjs": "^6.15.0",
+    "gatsby-source-filesystem": "^4.15.0",
+    "gatsby-theme-material-ui": "^5.2.0",
+    "gatsby-transformer-remark": "^5.15.1",
+    "gatsby-transformer-sharp": "^4.15.1",
     "katex": "^0.13.24",
+    "npm-check-updates": "^13.0.3",
     "prism-themes": "^1.9.0",
-    "prismjs": "^1.27.0",
+    "prismjs": "^1.28.0",
     "prop-types": "^15.8.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-responsive": "^9.0.0-beta.6",
+    "react-responsive": "^9.0.0-beta.8",
     "react-typography": "^0.16.20",
+    "sharp": "^0.30.6",
     "typewriter-effect": "^2.18.2",
     "typography": "^0.16.21",
     "typography-theme-alton": "^0.16.19"
